--- a/coursereview/templates/base.html
+++ b/coursereview/templates/base.html
@@ -1,9 +1,12 @@
-<!DOCTYPE html>
+{% load static %}
+
 <html lang="ru" class="h-100">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Coursereview{% endblock %}</title>
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon.png' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
@@ -40,14 +43,14 @@
                             <span class="nav-link text-light">Привет, {{ user.username }}!</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Профиль</a>
+                            <a class="nav-link" href="{% url "users:profile" %}">Профиль</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url "users:logout" %}">Выйти</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Регистрация</a>
+                            <a class="nav-link" href="{% url "users:register" %}">Регистрация</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url "users:login" %}">Войти</a>
