--- a/coursereview/users/templates/users/login.html
+++ b/coursereview/users/templates/users/login.html
@@ -43,7 +43,7 @@
                     <div class="text-center mt-4">
                         <p class="text-muted">
                             Нет аккаунта? 
-                            <a href="#" class="text-primary">
+                            <a href="{% url "users:register" %}" class="text-primary">
                                 Зарегистрируйтесь
                             </a>
                         </p>
