--- a/coursereview/reviews/templates/reviews/course_detail.html
+++ b/coursereview/reviews/templates/reviews/course_detail.html
@@ -1,4 +1,6 @@
-{% extends 'base.html' %} {% block title %}{{ course.title }}{% endblock %} 
+{% extends 'base.html' %} 
+
+{% block title %}{{ course.title }}{% endblock %} 
 
 {%block content %}
 <div class="container py-5">
