--- a/coursereview/reviews/templates/reviews/course_detail.html
+++ b/coursereview/reviews/templates/reviews/course_detail.html
@@ -93,13 +93,15 @@
           </li>
         </ul>
         <div class="d-grid gap-2">
-          <a href="#" class="btn btn-primary">Записаться на курс</a>
-          <a
-            href="{% url 'reviews:course_list' %}"
-            class="btn btn-outline-secondary"
-          >
-            Назад к списку
-          </a>
+            <a href="#" class="btn btn-primary">Записаться на курс</a>
+            {% if user.is_authenticated %}
+                <a href="{% url 'reviews:create_review' course.slug %}" class="btn btn-outline-primary">
+                    <i class="bi bi-pencil-square me-2"></i>Оставить отзыв
+                </a>
+            {% endif %}
+            <a href="{% url 'reviews:course_list' %}" class="btn btn-outline-secondary">
+                Назад к списку
+            </a>
         </div>
       </div>
     </div>
