--- a/coursereview/templates/base.html
+++ b/coursereview/templates/base.html
@@ -42,6 +42,19 @@
                         <li class="nav-item">
                             <span class="nav-link text-light">Привет, {{ user.username }}!</span>
                         </li>
+                        <!-- Ссылка на админку для модераторов -->
+                        {% if user.groups.all %}
+                            {% for group in user.groups.all %}
+                                {% if group.name == 'Moderator_Review' %}
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="/admin/" target="_blank">
+                                            <i class="bi bi-shield-check"></i> Модерация
+                                        </a>
+                                    </li>
+                                {% endif %}
+                            {% endfor %}
+                        {% endif %}
+
                         <li class="nav-item">
                             <a class="nav-link" href="{% url "users:profile" %}">Профиль</a>
                         </li>
