Первые ростки Логирования

--- a/coursereview/reviews/templates/reviews/course_detail.html
+++ b/coursereview/reviews/templates/reviews/course_detail.html
@@ -153,5 +153,25 @@
     .description {
         line-height: 1.6;
     }
+    .reviews .card {
+        background-color: rgb(87, 109, 130);
+        transition: background-color 0.2s ease;
+    }
+    .reviews .card:hover {
+        background-color: rgb(127, 155, 183);
+    }
+    /* Добавляем стили для текста в карточках отзывов */
+    .reviews .card-body {
+        color:rgb(59, 59, 59);
+    }
+    .reviews .card-title {
+        color:rgb(150, 150, 150);
+    }
+    .reviews .text-muted {
+        color: #e9ecef !important;
+    }
+    .reviews .text-primary {
+        color: #9fcdff !important;
+    }
 </style>
 {% endblock %}
