--- a/coursereview/users/templates/users/profile.html
+++ b/coursereview/users/templates/users/profile.html
@@ -20,6 +20,9 @@
                     <h5 class="card-title">{{ user.get_full_name|default:user.username }}</h5>
                     <p class="text-muted">{{ user.email }}</p>
                     <p class="text-muted small">Участник с {{ user.date_joined|date:"d.m.Y" }}</p>
+                    <a href="{% url 'users:user_reviews' %}" class="btn btn-outline-primary w-100">
+                        <i class="bi bi-chat-square-text me-2"></i>Мои отзывы
+                    </a>
                 </div>
             </div>
         </div>
